Stop vertical shift of the sieve's main frame.

--- a/wom_user/static/css/wom_sieve.css
+++ b/wom_user/static/css/wom_sieve.css
@@ -18,6 +18,11 @@ body {
   margin-bottom: 0px;
 }
 
+
+.panel-heading {
+ white-space: nowrap;
+}
+
 .panel-title {
   padding-left: 15px;
   padding-right: 15px;
